--- a/back/package.json
+++ b/back/package.json
@@ -2,10 +2,10 @@
   "name": "back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "jasmine", 
-    "start": "node server.js"
+    "test": "jasmine",
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "The Tiny Spark <contact@the-tiny-spark.com> (http://the-tiny-spark.com)",
@@ -13,7 +13,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "nodemon": "^2.0.1"
   },
   "devDependencies": {
     "jasmine": "^3.5.0",
