--- a/back/package.json
+++ b/back/package.json
@@ -11,6 +11,7 @@
   "author": "The Tiny Spark <contact@the-tiny-spark.com> (http://the-tiny-spark.com)",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
